@@ -1,17 +1,15 @@
-.TH addslashes(3) 2011-03-09 "Linux Manpage" "OOPS C Library's Manual"
+.TH addslashes(3) 2011-03-26 "Linux Manpage" "OOPS C Library's Manual"
 .\" Process with
 .\" nroff -man addslashes.3
 .\" 2011-03-09 JoungKyun Kim <htt://oops.org>
-.\" $Id: addslashes.3,v 1.11 2011-03-25 15:50:04 oops Exp $
+.\" $Id: addslashes.3,v 1.12 2011-03-25 19:16:23 oops Exp $
 .SH NAME
 addslashes \- Quote string with slashes
 
 .SH SYNOPSIS
 .B #include <olibc/libstring.h>
 .sp
-.BI "char * addslashes (char * in, bool should_free);"
-.br
-.BI "bool addslashes_r (const char * in, size_t inlen, char ** out, size_t * outlen);"
+.BI "bool addslashes (const char * in, size_t inlen, char ** out, size_t * outlen);"
 
 .SH "Link library"
 .B \-loc
@@ -35,12 +33,11 @@ that follows BSD license.
 .SH DESCRIPTION
 Returns a string with backslashes before characters that need
 to be quoted in database queries etc. These characters are single
- quote ('), double quote ("), backslash (\\).
+ quote ('), double quote ("), backslash (\\) and NULL byte (\\0).
 
-This is not binary safe. If you want to binary safe, use
-.B addslashes_r().
+The NULL byte is convert to string '\\0'.
 
-This function has same operation with addslashes() of PHP.
+This is binary safe.
 
 .TP
 .B in
@@ -48,16 +45,32 @@ This function has same operation with addslashes() of PHP.
 The given string for qouting
 
 .TP
-.B should_free
+.B inlen
 .br
-bool / set true, free memory of in argument into
-.B addslashes().
+The length of
+.B in
+argument.
+
+.TP
+.B out
+.br
+Save converted string.
+
+.TP
+.B outlen
+.br
+Save length of converted string.
 
 .SH "RETURN VALUE"
-The pointer of quoted string. When occurs internal error,
+.B bool
+
+When occurs internal error, 3th argument
+.B out
+of
 .B addslashes()
-returns null. If the return string array pointer is not null,
-the caller should deallocate this buffer using
+has null. If the 3the argument
+.B out
+is not null, the caller should deallocate this buffer using
 .B free()
 
 .SH EXAMPLE
@@ -65,17 +78,21 @@ the caller should deallocate this buffer using
 #include <olibc/libstring.h>
 
 int main (void) {
-    char * buf;
     char * str;
+    char * in;
+    char * out;
+    size_t outlen;
 
     str = malloc (sizeof (char) * 32);
     strcpy (str, "abc'def'gh\\"ij\\"klmn");
 
     // free memory str variabl into addslashes()
-    buf = addslashes (str, 1);
-    printf ("%s\\n", buf);
+    if ( addslashes (str, strlen (str), &out, &outlen) != false ) {
+    	printf ("%s\\n", out);
+        free (out);
+    }
 
-    free (buf);
+    free (str);
 
     return 0;
 }
