@@ -1,15 +1,15 @@
-.TH addslashes(3) 2011-03-09 "Linux Manpage" "OOPS C Library's Manual"
+.TH addslashes(3) 2011-03-26 "Linux Manpage" "OOPS C Library's Manual"
 .\" Process with
 .\" nroff -man addslashes.3
 .\" 2011-03-09 JoungKyun Kim <htt://oops.org>
-.\" $Id: addslashes.3,v 1.1 2011-03-08 17:50:06 oops Exp $
+.\" $Id: addslashes.3,v 1.2 2011-03-25 19:16:23 oops Exp $
 .SH 이름
 addslashes \- 문자열을 슬래시로 인용
 
 .SH 사용법
 .B #include <olibc/libstring.h>
 .sp
-.BI "char * addslashes (char * str, bool should_free);"
+.BI "bool addslashes (const char * in, size_t inlen, char ** out, size_t * outlen);"
 
 .SH 라이브러리 링크
 .B \-loc
@@ -32,44 +32,62 @@ or
 
 .SH 설명
 데이터 베이스 쿼리와 같이 인용된 부분 앞에 백슬래쉬를 붙여 반환한다. 이런 문자에는
-작은 따옴표 ('), 큰 따옴표 ("), 백슬래쉬 (\\), 그리고 NULL (null byte)이 있다.
+작은 따옴표 ('), 큰 따옴표 ("), 백슬래쉬 (\\), 그리고 NULL (\\0)이 있다.
 
-이 함수는 php 의 addslashes 와 동일하게 작동을 한다.
-
-.TP
-.B str
-.br
-변환할 원본 문자열이 들어 있는 변수를 지정한다.
+NULL byte (\\0)은 문자열 '\\0'으로 변환이 된다.
 
 .TP
-.B should_free
+.B in
 .br
-.B true
-로 지정을 하면
-.B addslashes()
-함수 내부에서 str의 메모리 해제(free)를 시도한다.
-.B false
-를 지정하면 아무런 작동을 하지 않는다.
+입력할 문자열
+
+.TP
+.B inlen
+.br
+입력할 문자열의 길이
+
+.TP
+.B out
+.br
+변환된 문자열이 저장
+
+.TP
+.B outlen
+.br
+.B out
+인자의 길이
 
 .SH 반환값
-변환된 문자열의 포인터가 반환된다. 반환된 포인터는 메모리
-해제(free)를 해 줘야 한다.
+bool.
+
+실패시,
+.B out
+인자는 NULL 값을 가진다. NULL이 아닐 경우, free() api를 이용하여
+메모리를 반환해야 한다.
 
 .SH 예제
 .nf
 #include <olibc/libstring.h>
 
-char *buf;
-char *str;
+int main (void) {
+    char * str;
+    char * in;
+    char * out;
+    size_t outlen;
 
-str= malloc (sizeof (char) * 32);
-strcpy (str, "abc'def'gh\\"ij\\"klmn");
+    str = malloc (sizeof (char) * 32);
+    strcpy (str, "abc'def'gh\\"ij\\"klmn");
 
-/* str 변수는 addslashes 함수 내부에서 메모리 해제가 된다 */
-buf = addslashes (str, 1);
-printf ("%s\\n", buf);
+    // free memory str variabl into addslashes()
+    if ( addslashes (str, strlen (str), &out, &outlen) != false ) {
+    	printf ("%s\\n", out);
+        free (out);
+    }
 
-free (buf);
+    free (str);
+
+    return 0;
+}
 .fi
 
 .SH 작성
