@@ -6,11 +6,11 @@
  * proto type of internal apis.
  *
  * @author	JoungKyun.Kim <http://oops.org>
- * $Date: 2011-03-24 15:13:07 $
- * $Revision: 1.22 $
+ * $Date: 2011-03-25 19:16:22 $
+ * $Revision: 1.23 $
  * @attention	Copyright (c) 2011 JoungKyun.Kim all rights reserved.
  */
-/* $Id: oc_common.h,v 1.22 2011-03-24 15:13:07 oops Exp $ */
+/* $Id: oc_common.h,v 1.23 2011-03-25 19:16:22 oops Exp $ */
 
 #ifndef OC_COMMON_H
 #define OC_COMMON_H
@@ -62,9 +62,9 @@
 #include <olibc/oc_type.h>
 
 bool only_whitespace (CChar * stream, CInt length);
-UInt get_charcount (CChar * str, CChar * del);
-Bit64 devided64_high_low (ULong64 v);
-ULong64 combined64_high_low (Bit64 v);
+UInt get_charcount (CChar * str, size_t sl, CChar * del, size_t dl);
+Bit64 devided64_high_low (Long64 v);
+Long64 combined64_high_low (Bit64 v);
 
 #endif
 /*
